--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link href="https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Chokokutai&family=Frijole&family=Mystery+Quest&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ribeye+Marrow&family=Rock+3D&family=Rubik+Distressed&family=Rubik+Maze&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
